# aa-sov-monitor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml  runtests.py  setup.cfg  tox.ini
.github/workflows/: autotester.yml  release.yml
aa_sov_monitor/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  models.py  providers.py  tasks.py  urls.py  views.py
aa_sov_monitor/locale/de/LC_MESSAGES/: django.mo  django.po
aa_sov_monitor/migrations/: 0001_initial.py  0002_sovupgrade_power_state.py  0003_sovhubresource_sovhubreagent.py  0004_alter_sovowner_options.py  0005_sovsystem_industrial_level_sovsystem_military_level_and_more.py  0006_sovconfiguration_webhook_adm_and_more.py  0007_general_model_permissions.py  0008_update_verbose_names.py  0009_remove_sovsystem_has_tcu.py  0010_sovconfiguration_last_full_sync.py
aa_sov_monitor/templates/aa_sov_monitor/: index.html
aa_sov_monitor/tests/: test_models.py  test_tasks.py  test_views.py
testauth/settings/: local.py
