[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "aa-sov-monitor"
description = "Alliance Auth plugin to monitor EVE Online sovereignty and IHUB upgrades"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10,<3.14"
authors = [{ name = "GurkeTonic", email = "pberbuir@googlemail.com" }]
dependencies = ["allianceauth>=5.1.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/GurkeTonic/aa-sov-monitor"

[project.entry-points."allianceauth.app"]
aa_sov_monitor = "aa_sov_monitor.apps:AaSovMonitorConfig"

[tool.hatch.version]
path = "aa_sov_monitor/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["/aa_sov_monitor"]
