[metadata]
name = aa-sov-monitor
version = 0.1.1
description = Alliance Auth plugin to monitor EVE Online sovereignty and IHUB upgrades
long_description = file: README.md
long_description_content_type = text/markdown
author = GurkeTonic
author_email = pberbuir@googlemail.com
license = MIT
url = https://github.com/GurkeTonic/aa-sov-monitor

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    allianceauth>=5.1.0

[options.package_data]
aa_sov_monitor =
    templates/**/*

[options.entry_points]
allianceauth.app =
    aa_sov_monitor = aa_sov_monitor.apps:AaSovMonitorConfig
